@@ -1,0 +1,5 @@
+## Process this file with automake to produce Makefile.in
+
+noinst_LIBRARIES = libagentsysinfo.a
+
+libagentsysinfo_a_SOURCES = agent.c agent.h
