@@ -23,15 +23,19 @@
 #include "cfg.h"
 #include "alias.h"
 
-#if defined(WITH_COMMON_METRICS)
+#ifdef WITH_AGENT_METRICS
+#	include "agent/agent.h"
+#endif
+
+#ifdef WITH_COMMON_METRICS
 #	include "common/common.h"
 #endif
 
-#if defined(WITH_SIMPLE_METRICS)
+#ifdef WITH_SIMPLE_METRICS
 #	include "simple/simple.h"
 #endif
 
-#if defined(WITH_SPECIFIC_METRICS)
+#ifdef WITH_SPECIFIC_METRICS
 #	include "specsysinfo.h"
 #endif
 
@@ -114,17 +118,22 @@ void	init_metrics()
 	commands = zbx_malloc(commands, sizeof(ZBX_METRIC));
 	commands[0].key = NULL;
 
-#if defined(WITH_COMMON_METRICS)
+#ifdef WITH_AGENT_METRICS
+	for (i = 0; NULL != parameters_agent[i].key; i++)
+		add_metric(&parameters_agent[i]);
+#endif
+
+#ifdef WITH_COMMON_METRICS
 	for (i = 0; NULL != parameters_common[i].key; i++)
 		add_metric(&parameters_common[i]);
 #endif
 
-#if defined(WITH_SPECIFIC_METRICS)
+#ifdef WITH_SPECIFIC_METRICS
 	for (i = 0; NULL != parameters_specific[i].key; i++)
 		add_metric(&parameters_specific[i]);
 #endif
 
-#if defined(WITH_SIMPLE_METRICS)
+#ifdef WITH_SIMPLE_METRICS
 	for (i = 0; NULL != parameters_simple[i].key; i++)
 		add_metric(&parameters_simple[i]);
 #endif
